--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
     </header>
 
@@ -58,24 +58,24 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/Team Card 1.jpg" alt="Photo of our Product Designer" width="264" height="260" />
+                    <img src="./images/team-card-1.jpg" alt="Photo of our Product Designer" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Team Card 2.jpg" alt="Photo of our Frontend Developer" width="264"
+                    <img src="./images/team-card-2.jpg" alt="Photo of our Frontend Developer" width="264"
                         height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Team Card 3.jpg" alt="Photo of our Marketing specialist" width="264"
+                    <img src="./images/team-card-3.jpg" alt="Photo of our Marketing specialist" width="264"
                         height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Team Card 4.jpg" alt="Photo of our UI Designer" width="264" height="260" />
+                    <img src="./images/team-card-4.jpg" alt="Photo of our UI Designer" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
