--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#studio">Studio</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -18,8 +18,10 @@
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>
     </header>
 
@@ -30,6 +32,7 @@
         </section>
 
         <section>
+            <h2>title</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
